RESOLVED FIXED232505
Increase responsiveness timeout for network process
https://bugs.webkit.org/show_bug.cgi?id=232505
Summary Increase responsiveness timeout for network process
Sihui Liu
Reported 2021-10-29 14:32:25 PDT
...
Attachments
Patch (10.47 KB, patch)
2021-10-29 14:38 PDT, Sihui Liu
no flags
Patch (10.89 KB, patch)
2021-10-29 15:10 PDT, Sihui Liu
no flags
Patch for landing (10.87 KB, patch)
2021-11-01 10:04 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2021-10-29 14:38:18 PDT
Chris Dumez
Comment 2 2021-10-29 14:41:04 PDT
Comment on attachment 442864 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=442864&action=review > Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:47 > + AuxiliaryProcessProxy(bool alwaysRunsAtBackgroundPriority, Seconds); Why are you adding a second constructor instead of extending the existing one? > Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:204 > + : AuxiliaryProcessProxy(anyProcessPoolAlwaysRunsAtBackgroundPriority(), 6_s) Please use a global static constant with a nice name for 6_s.
Sihui Liu
Comment 3 2021-10-29 15:10:43 PDT
Sihui Liu
Comment 4 2021-10-29 15:12:07 PDT
To help resolve web process crash issue rdar://84745326.
Sihui Liu
Comment 5 2021-10-29 15:12:37 PDT
(In reply to Chris Dumez from comment #2) > Comment on attachment 442864 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=442864&action=review > > > Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:47 > > + AuxiliaryProcessProxy(bool alwaysRunsAtBackgroundPriority, Seconds); > > Why are you adding a second constructor instead of extending the existing > one? Removed. > > > Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:204 > > + : AuxiliaryProcessProxy(anyProcessPoolAlwaysRunsAtBackgroundPriority(), 6_s) > > Please use a global static constant with a nice name for 6_s. Sure.
Chris Dumez
Comment 6 2021-10-29 15:14:27 PDT
Comment on attachment 442870 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=442870&action=review r=me assuming the bots are happy > Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:89 > +static const Seconds networkProcessResponsivenessTimeout = 6_s; constexpr
Sihui Liu
Comment 7 2021-11-01 10:04:36 PDT
Created attachment 442987 [details] Patch for landing
EWS
Comment 8 2021-11-01 10:45:43 PDT
Committed r285115 (243756@main): <https://commits.webkit.org/243756@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442987 [details].
Radar WebKit Bug Importer
Comment 9 2021-11-01 10:46:26 PDT
Note You need to log in before you can comment on or make changes to this bug.