Increase responsiveness timeout for network process https://bugs.webkit.org/show_bug.cgi?id=232505

Reviewed by Chris Dumez.

* UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::AuxiliaryProcessProxy):
* UIProcess/AuxiliaryProcessProxy.h:
* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::NetworkProcessProxy):
(WebKit::NetworkProcessProxy::getNetworkProcessConnection):
* UIProcess/ResponsivenessTimer.cpp:
(WebKit::ResponsivenessTimer::ResponsivenessTimer):
(WebKit::ResponsivenessTimer::timerFired):
(WebKit::ResponsivenessTimer::start):
(): Deleted.
* UIProcess/ResponsivenessTimer.h:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::getNetworkProcessConnection):



Canonical link: https://commits.webkit.org/243756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285115 268f45cc-cd09-0410-ab3c-d52691b4dbfc